--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,17 @@ before_install:
 
 script:
   - docker run -e CI=true robturtle/app npm test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-1"
+  app: "udemy-docker"
+  env: "UdemyDocker-env"
+  bucket_name: "elasticbeanstalk-us-west-1-402467898701"
+  bucket_path: "udemy-docker"
+  on:
+    branch: master
+  access_key_id:
+    secure: "$AWS_ACCESS_KEY"
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
